<resources>
    <string name="app_name">AnroidUIScreen</string>
    <string name="deliveryEveryEveryWhere">Delivery\neverywhere</string>
    <string name="fastFoodDelivery">Fast food\ndelivery</string>
    <string name="foodSubString">We are always ready to deliver your \nitems quickly and professionally</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_to_yummy">Welcome to yummy!</string>
    <string name="email_address">Email address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="you_entered_it_wrong">You entered it wrong</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="facebook">Facebook</string>
    <string name="apple">Apple</string>
    <string name="enter_email_address">Enter EmailAddress</string>
    <string name="password_maximum_contain_6_character">Password maximum contain 6 character</string>
    <string name="enter_proper_email_address">Enter Proper EmailAddress</string>
    <string name="do_not_have_not_an_account_sign_up">Do not have an account? Sign up</string>
    <string name="perfect_email">perfect Email</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_and_experience_nthe_service">Sign up and experience \nthe service</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="number_phone">Number phone</string>
    <string name="enter_your_number_phone">Enter your number phone</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number_validation_digit">Maximum 10 digit Required</string>
    <string name="validation">validation</string>
    <string name="account_is_not_created">Account  is not Created..</string>
    <string name="account_created">Account Created..</string>
    <string name="already_have_an_account">Already have an account? Sign in</string>
    <string name="delivery_to">Delivery to</string>
    <string name="_92_hang_trong">92 Hang Trong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="super_hot">Super hot</string>
    <string name="meat_with_sauce">Meat - with sauce</string>
    <string name="_4_5">4.5</string>
    <string name="_100">(100+)</string>
    <string name="top_discounts">Top discounts</string>
    <string name="_01">01</string>
    <string name="colon">:</string>
    <string name="_10_off_orders_from_50">$10 off orders from $50</string>
    <string name="top_voucher">Top voucher</string>
    <string name="we_have_50_discount_codes">We have 50 discount codes</string>
    <string name="near_you">Near you</string>
    <string name="combination_fried_rice">Combination fried rice</string>
    <string name="shrimp_ham_mix_vegetable">Shrimp, ham, mix vegetable</string>
    <string name="space_division">|</string>
    <string name="_1_2km">1.2km</string>
    <string name="voucher">Voucher</string>
    <string name="rice">Rice</string>
    <string name="drink">Drink</string>
    <string name="fast_food">Fast food</string>
    <string name="bread">Bread</string>
    <string name="combo_hot">Combo hot</string>
    <string name="steak_beef">Steak Beef</string>
    <string name="wonton_egg_noodle_soup">Wonton egg noodle soup</string>
    <string name="chicken_black_bean">Chicken black bean</string>
    <string name="_5_00m">500m</string>
    <string name="_2_pieces_with_sauce">2 pieces - with sauce</string>
    <string name="zero">00</string>
    <string name="email">email</string>

</resources>