<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".signinscreen.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBanner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/interbold"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_28ssp"
            app:layout_constraintBottom_toBottomOf="@id/imageBanner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/intermedium"
            android:text="@string/welcome_to_yummy"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSignIn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/email_address"
            android:textColor="@color/textViewColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageBanner" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:backgroundTint="#D8C410"
            app:boxStrokeColor="@color/errorMessageColor"
            app:errorContentDescription="@string/you_entered_it_wrong"
            app:errorEnabled="true"
            app:errorTextColor="@color/errorMessageColor"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/intermedium"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/password"
            android:textColor="@color/textViewColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:textColor="@color/textViewColor"
            app:boxStrokeColor="@color/errorMessageColor"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:errorContentDescription="@string/enter_password"
            app:errorTextColor="@color/errorMessageColor"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/passwordDotColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/intermedium"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/rememberCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:buttonTint="@color/rememberMeColor"
            android:fontFamily="@font/intermedium"
            android:text="@string/remember_me"
            android:textColor="@color/rememberMeColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13sdp"
            android:fontFamily="@font/intermedium"
            android:text="@string/forgot_password"
            android:textColor="@color/forgotPassword"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@id/rememberCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/rememberCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@drawable/btn_shape"
            android:drawableStart="@drawable/ic_facebook"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/intermedium"
            android:paddingStart="@dimen/_30sdp"
            android:paddingTop="@dimen/_13sdp"
            android:paddingBottom="@dimen/_13sdp"
            android:text="@string/facebook"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/facebookTextColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@id/btnSignIn"
            app:layout_constraintEnd_toStartOf="@+id/btnApple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rememberCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/btn_apple"
            android:drawableStart="@drawable/ic_apple"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/intermedium"
            android:paddingStart="@dimen/_30sdp"
            android:paddingTop="@dimen/_13sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:paddingBottom="@dimen/_13sdp"
            android:text="@string/apple"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/facebookTextColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/btnFacebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnFacebook" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btn_signin"
            android:fontFamily="@font/interregular"
            android:paddingTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/appleColor"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textDoNotHaveAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:fontFamily="@font/intermedium"
            android:textColor="@color/doNotAccount"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>