<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".signupscreen.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageSignUpBanner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/sign_up_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textCreateAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/interbold"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintBottom_toBottomOf="@id/imageSignUpBanner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/intermedium"
            android:text="@string/sign_up_and_experience_nthe_service"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCreateAccount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/full_name"
            android:textColor="@color/textViewColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageSignUpBanner" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:backgroundTint="#D8C410"
            app:boxStrokeColor="@color/errorMessageColor"
            app:errorContentDescription="@string/you_entered_it_wrong"
            app:errorEnabled="true"
            app:errorTextColor="@color/errorMessageColor"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/intermedium"
                android:hint="@string/enter_your_full_name"
                android:inputType="textPersonName"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/email_address"
            android:textColor="@color/textViewColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:boxStrokeColor="@color/errorMessageColor"
            app:errorContentDescription="@string/you_entered_it_wrong"
            app:errorEnabled="true"
            app:errorTextColor="@color/errorMessageColor"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmailInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/intermedium"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/number_phone"
            android:textColor="@color/textViewColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputUserEmail" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:boxStrokeColor="@color/errorMessageColor"
            app:errorContentDescription="@string/you_entered_it_wrong"
            app:errorEnabled="true"
            app:errorTextColor="@color/errorMessageColor"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPhoneNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/intermedium"
                android:hint="@string/enter_your_number_phone"
                android:inputType="phone"
                android:maxLength="10"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/password"
            android:textColor="@color/textViewColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPhoneNumber" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:textColor="@color/textViewColor"
            app:boxStrokeColor="@color/errorMessageColor"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:errorContentDescription="@string/enter_password"
            app:errorTextColor="@color/errorMessageColor"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPassword"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/passwordDotColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPasswordInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/intermedium"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="@dimen/_14ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/btn_signin"
            android:fontFamily="@font/interregular"
            android:paddingTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/appleColor"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userInputPassword" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textDoNotHaveAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:fontFamily="@font/intermedium"
            android:textColor="@color/doNotAccount"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>